# shanghai-rental-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  shanghai_real_estate_agent_implementation_plan.md  shanghai_rental_agent_geo_commute_optimization_plan.md
app/: __init__.py  config.py  db.py  main.py
app/agents/: __init__.py  base.py  commute_agent.py  compliance_agent.py  customer_need_agent.py  data_availability_agent.py  document_agent.py  listing_agent.py  map_visualization_agent.py  marketing_agent.py  policy_agent.py  rental_agent.py  rental_recommendation_agent.py  repair_agent.py  social_insight_agent.py  supervisor.py  transaction_agent.py
app/api/: deps.py  key_overrides.py
app/models/: __init__.py  audit.py  chat.py  commute.py  customer.py  document.py  geo.py  listing.py  policy.py  rental_listing.py  repair.py  (+3 more)
scripts/: chat_cli.py  embed_all.py  import_rental_listings_csv.py  ingest_policies.py  init_db.py  migrate_user_anchor_customer_id.py  seed_demo_data.py  seed_demo_rental_listings.py  seed_shanghai_geo_data.py  smoke_test.py
tests/: test_agent_chat.py  test_amap_service_without_key.py  test_city_guard.py  test_commute_scoring.py  test_compliance_agent.py  test_customer_need_agent.py  test_data_availability_agent.py  test_image_service.py  test_import_helpers.py  test_listing_search.py  test_map_geojson.py  test_marketing_agent.py  test_openai_service_fallback.py  test_policy_agent.py  test_rental_recommendation.py  test_repair_agent.py  test_social_insight.py
(+72 files in other folders)
