[project]
name = "shanghai-re-agent"
version = "0.1.0"
description = "Shanghai-only real estate agent MVP"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "aiofiles>=23.0.0",
  "pillow>=10.0.0",
  "tenacity>=8.5.0",
  "orjson>=3.10.0",
  "rich>=13.7.0",
  "pypdf>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py"]
